testsuite/bsc.verilog/splitports/ArgNamesPragma_PortNameConflict.bs.bsc-vcomp-out.expected
checking package dependencies
compiling ArgNamesPragma_PortNameConflict.bs
code generation for sysArgNamesPragma_PortNameConflict starts
Error: "ArgNamesPragma_PortNameConflict.bs", line 21, column 0: (G0055)
  Method `putFoo' generates a port with name `fooIn_f_z' which conflicts with
  a port of the same name generated by method `putFoo' at location
  "ArgNamesPragma_PortNameConflict.bs", line 21, column 0.
